# VulkanRenderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
app/: CMakeLists.txt
app/data/configs/: film_grain.ini  simple_colour_overlay.ini
app/inc/: HDRIRenderTarget.h  HDRI_render_target.h  TimingQueryPool.h  app.h  camera.h  context.h  datatypes.h  delegate.h  helper.h  mesh.h  pingpong_render_target.h  post_processing_effect.h  scene.h  shadow_generation.h  world_time.h
app/shaders/: alpha_discard.frag  basic_color.frag  basic_transform.vert  blit.frag  frag_depth_override.frag  gbuffer_generation.frag  lighting.frag  transform_to_lightspace.vert  transform_w_normals.vert
app/shaders/sdr_post_processing/: film_grain.frag  sdr_available_data.glsl  simple_colour_overlay.frag
app/src/: HDRIRenderTarget.cpp  HDRI_render_target.cpp  TimingQueryPool.cpp  app.cpp  helper.cpp  mesh.cpp  pingpong_render_target.cpp  post_processing_effect.cpp  scene.cpp  timing_query_pool.cpp  world_time.cpp
app/vulkan-classes/: CMakeLists.txt
app/vulkan-classes/inc/: buffer.h  command_pool.h  descriptor_set_layout.h  image.h  pipeline.h  pipeline_layout.h  shader_stage.h
app/vulkan-classes/src/: buffer.cpp  command_pool.cpp  descriptor_set_layout.cpp  image.cpp  pipeline.cpp
vulkan-classes/: CMakeLists.txt
vulkan-classes/inc/: Buffer.h  buffer.h  command_buffer.h  context.h  datatypes.h  descriptor_pool.h  descriptor_set_layout.h  image.h  image_view.h  pipeline.h  pipeline_layout.h  shader_stage.h
vulkan-classes/src/: buffer.cpp  command_buffer.cpp  descriptor_pool.cpp  descriptor_set.cpp  descriptor_set_layout.cpp  image.cpp  image_view.cpp  pipeline.cpp  pipeline_layout.cpp
